# WaferDetect

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  README.md  WaferDefect.ipynb  WaferDetect.ipynb  experiment.ipynb  main.py  map.py  plot_annotated.py  pyproject.toml  wafer_map.py
.github/workflows/: sync-space.yml
colab/: stage1_baseline.md  stage2_data_engine.md  stage4_wm811k.md
deploy/: entrypoint.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  api.ts  format.test.ts  format.ts  index.css  main.tsx  theme.ts  ui.ts  useCountUp.ts  useDebounced.ts
frontend/src/components/: DiagnosisCard.tsx  FieldHeatmap.tsx  InfoModal.tsx  MetricTile.tsx  PageHeader.tsx  ParamField.tsx  ThemeToggle.tsx  WaferCanvas.test.tsx  WaferCanvas.tsx
frontend/src/views/: Analyze.tsx  Detect.tsx  DetectionViewer.tsx  Evaluation.tsx  PhysicsLab.tsx  Reports.tsx  WaferExplorer.tsx  YieldAnalytics.tsx
poster/: Rishab Alagharu - WaferDetect GHP 63 CS Poster.pptx  ~$Rishab Alagharu - WaferDetect GHP 63 CS Poster.pptx
scripts/analytics/: diagnosis.py  diegrid.py  economics.py  fieldanalysis.py  kinematics.py  knowledge_base.yaml  yieldmodels.py
scripts/api/: klarf.py  main.py  plots.py  report.py
scripts/api/routers/: analyze.py  detect.py  diagnose.py  (+4 more)
scripts/baselines/: classical.py  resnet.py
scripts/datagen/: export_klarf.py  fields.py  generator.py  labels.py  layout.py  review.py
scripts/perception/: dataset.py  evaluate.py  train.py
scripts/wm811k/: convert.py  manifests.py  pseudolabel.py  render.py  zero_shot.py
tests/: test_annotations.py  test_api_analysis.py  test_api_analyze.py  test_api_detect.py  test_api_generate_physics.py  test_api_klarf.py  test_api_main.py  test_api_physics.py  test_api_report.py  test_api_wafers.py  test_classical.py  test_cmp.py  test_dataset_layout.py  test_dataset_split.py  test_diagnosis.py  test_diegrid.py  test_economics.py  test_evaluate.py  test_fieldanalysis.py  test_fields.py  test_generator.py  test_kinematics.py  test_labels.py  test_layout.py  test_physics_builders.py  test_raw_layout.py  test_resnet_baseline.py  test_review.py  test_shotgrid_physics.py  test_spincoat.py  test_thermal.py  test_wm811k_convert.py  test_wm811k_manifests.py  test_wm811k_pseudolabel.py  test_wm811k_render.py  test_wm811k_zero_shot.py  test_yieldmodels.py
(+14 files in other folders)
