[project]
name = "waferdetect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "fastapi>=0.139.0",
    "ipython>=9.15.0",
    "matplotlib>=3.11.0",
    "matplotlib-inline>=0.2.2",
    "networkx>=3.6.1",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "ultralytics>=8.4.84",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
